@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.114 2016/10/01 18:42:53 kamil Exp $
+# $NetBSD: Makefile,v 1.115 2017/02/12 10:48:55 jmmv Exp $
 #
 
 COMMENT=	Tools for use in the packages collection
@@ -34,7 +34,7 @@ SUBDIR+=	pbulk-base
 SUBDIR+=	pkg
 SUBDIR+=	pkg_alternatives
 SUBDIR+=	pkg_chk
-SUBDIR+=	pkg_comp
+SUBDIR+=	pkg_comp1
 SUBDIR+=	pkg_distinst
 SUBDIR+=	pkg_filecheck
 SUBDIR+=	pkg_install
