@@ -1,12 +1,14 @@
-# $NetBSD: Makefile,v 1.55 2015/11/21 23:10:27 agc Exp $
+# $NetBSD: Makefile,v 1.1 2017/02/12 10:48:55 jmmv Exp $
 
-PKGNAME=	pkg_comp-1.38
+PKGNAME=	pkg_comp1-1.38
 PKGREVISION=	1
 CATEGORIES=	pkgtools
 
-MAINTAINER=	jmmv@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Build packages inside a chroot jail
 LICENSE=	modified-bsd
+
+CONFLICTS=	pkg_comp-[0-9]*
 
 ONLY_FOR_PLATFORM=	NetBSD-*-*
 
