@@ -1,4 +1,4 @@
-.\" $NetBSD: pkg_comp.8,v 1.41 2015/11/21 23:10:27 agc Exp $
+.\" $NetBSD: pkg_comp.8,v 1.1 2017/02/12 10:48:55 jmmv Exp $
 .\"
 .\" pkg_comp - Build packages inside a clean chroot environment
 .\" Copyright (c) 2002, 2003, 2004, 2005 Julio M. Merino Vidal <jmmv@NetBSD.org>
